name change, color change

--- a/expense-splitter-vue/src/style.css
+++ b/expense-splitter-vue/src/style.css
@@ -10,6 +10,6 @@ body
     place-items: center;
     padding: 24px;
     font-family: system-ui, sans-serif;
-    background: #0e9c2f;
-    color: #8f0904;
+    background: #0e579c;
+    color: #f5f107;
 }
